fix featured image stretching and remove qr code accompanying text

--- a/designs/digital_pdf/assets/style.css
+++ b/designs/digital_pdf/assets/style.css
@@ -254,7 +254,7 @@
     }
 
     .pmbcpm-qr-code-wrapper{
-        background-color:rgb(222,228,233);
+        /*background-color:rgb(222,228,233);*/
         padding:5px;
         margin-top:5px;
         display:flex;
@@ -298,6 +298,8 @@
     }
     .post-thumbnail>img{
         width:100%;
+        max-height:none;
+        height:auto;
     }
     .post-thumbnail.top{
         /*height:40vh;*/
